--- a/cv-index.html
+++ b/cv-index.html
@@ -180,57 +180,12 @@
     </tbody>
   </table>
 
-  <h3>Software dominados</h3>
-  <hr size="3" , noshade>
-  <ul>
-    <li>Microsoft project</li>
-    <li>ETSt profesional KNX</li>
-    <li>SolidWorks</li>
-    <li>MasterCam</li>
-    <li>KiCad</li>
-    <li>Microsoft Office paquete profesional</li>
-    <li>MatLab</li>
-    <li>VIVADO</li>
-    <li>MPLab</li>
-    <li>IMovie</li>
-    <li>Dev C++</li>
-    <li>Python 3.7.1</li>
-    <li>Xilinx ISE</li>
-    <li>Atom</li>
-    <li>Visual Studio Code</li>
-  </ul>
+<ul>
+  <li><h3><a href="soft.html">Software dominados</a></h3></li>
+  <li><h3><a href="poyectos.html">Proyecto desarrollados</a></h3></li>
+  <li><h3><a href="interes.html">Area de interes</a></h3></li>
+</ul>
 
-  <h3>Proyecto desarrollados</h3>
-  <hr size="3" , noshade>
-  <ul>
-    <li>Sistema de control e inventario comercial</li>
-    <li>Anti sway crane control</li>
-    <li>Control electronico balancin invertido</li>
-    <li>Creacion de modelo brazo robotico</li>
-    <li>Seguidor de linea con compensador p (pic)</li>
-    <li>Transformador autoregulable por taps</li>
-    <li>Simulador de vehiculo transmision manual (VHDL)</li>
-    <li>Sistema automatizado de elavado y secado de yuca casaba</li>
-    <li>Modelo de automovil electrico con sistema regenerativo</li>
-    <li>Automatizacion de embazadora de agua neumatico</li>
-    <li>Brazo robotico Scara (modelo y programacion)</li>
-    <li>Forest Rover (Proyecto reforestador autonomo)</li>
-  </ul>
-
-  <h3>Area de interes</h3>
-  <hr size="3" , noshade>
-  <ul>
-    <li>Domotica</li>
-    <li>Programacion</li>
-    <li>Automatizacion</li>
-    <li>Sistema de generacion de electricidad</li>
-    <li>Motores electricos</li>
-    <li>Automotriz</li>
-    <li>Ergonomia</li>
-    <li>Seguridad</li>
-    <li>Sistemas mecanicos, hidraulicos, neumaticos</li>
-    <li>MTB</li>
-  </ul>
 
 </body>
 
