--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1> Hector Manuel Inoa Nuñez</h1>
         <hr size="3" , noshade>
 
-        <p>ingeniero mecatrónico con amplia experiencia en proyectos de integración
+        <p>Ingeniero mecatrónico con amplia experiencia en proyectos de integración
           de tecnologias, automatización, eficiencia energética y dirección de proyectos
-          a pequeña escala. Amplio dominio de difernetes software computacionales, así
+          a pequeña escala. Amplio dominio de diferentes software computacionales, así
           como facilidad y disponibilidad de aprendizaje de nuevos softwares, herramientas
           y procedimeintos necesarios para llevar a cabo la tarea encomendada, Sociable,
           con habilidades para el trabajo en equipo, así como liderar equipos de trabajo de
@@ -60,7 +60,7 @@
       <td><strong>Español (lengua materna)</strong></td>
     </tr>
     <tr>
-      <td><strong>Inlges (avanzado)</strong></td>
+      <td><strong>Inlgés (avanzado)</strong></td>
     </tr>
   </table>
 
@@ -100,7 +100,7 @@
 
   </table>
 
-  <h3>Habilidades tecnicas</h3>
+  <h3>Habilidades técnicas</h3>
   <hr size="3" , noshade>
   <table cellspacing="10">
     <ul>
