--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title> ⚙🔧Hector's Personal Site 🔧⚙</title>
-  <title></title>
+  <link rel="stylesheet" href="CSS/styles.css">
+
 </head>
 
 <body>
@@ -13,7 +14,7 @@
       <td><img src="images/fondoblanco.png" style="width:200px;height:200px;" alt="Imagen Presentacion Hector inoa"></td>
       <td>
         <h1> Hector Manuel Inoa Nuñez</h1>
-        <hr size="3" , noshade>
+        <hr noshade>
 
         <p>Ingeniero mecatrónico con amplia experiencia en proyectos de integración
           de tecnologias, automatización, eficiencia energética y dirección de proyectos
@@ -27,7 +28,7 @@
   </table>
 
   <h3>Informacion Personal</h3>
-  <hr size="3" , noshade>
+  <hr noshade>
   <table cellspacing="3">
     <tr>
       <td>Fecha de nacimiento:</td>
@@ -65,7 +66,7 @@
   </table>
 
   <h3>Educación</h3>
-  <hr size="3" , noshade>
+  <hr noshade>
   <table cellspacing="10">
     <tr>
       <td>2014</td>
@@ -101,7 +102,7 @@
   </table>
 
   <h3>Habilidades técnicas</h3>
-  <hr size="3" , noshade>
+  <hr noshade>
   <table cellspacing="10">
     <ul>
       <tr>
@@ -148,7 +149,7 @@
   </table>
 
   <h3>Experiencia Laboral</h3>
-  <hr size="3" , noshade>
+  <hr noshade>
 
   <table cellspacing="10">
     <thead>
@@ -180,11 +181,20 @@
     </tbody>
   </table>
 
-<ul>
-  <li><h3><a href="soft.html">Software dominados</a></h3></li>
-  <li><h3><a href="poyectos.html">Proyecto desarrollados</a></h3></li>
-  <li><h3><a href="interes.html">Area de interes</a></h3></li>
-</ul>
+  <ul>
+    <li>
+      <h3><a href="soft.html">Software dominados</a></h3>
+    </li>
+    <li>
+      <h3><a href="poyects.html">Proyecto desarrollados</a></h3>
+    </li>
+    <li>
+      <h3><a href="hobbies.html">Area de interes</a></h3>
+    </li>
+    <li>
+      <h3><a href="contac-me.html">Formas de contacto</a></h3>
+    </li>
+  </ul>
 
 
 </body>
