--- a/soft.html
+++ b/soft.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Software dominados</title>
-  </head>
-  <body>
 
-    <h1>Software dominados</h1>
+<head>
+  <meta charset="utf-8">
+  <title>Software dominados</title>
+  <link rel="stylesheet" href="CSS/styles.css">
+</head>
 
-    <ul>
-      <li>Microsoft project</li>
-      <li>ETSt profesional KNX</li>
-      <li>SolidWorks</li>
-      <li>MasterCam</li>
-      <li>KiCad</li>
-      <li>Microsoft Office paquete profesional</li>
-      <li>MatLab</li>
-      <li>VIVADO</li>
-      <li>MPLab</li>
-      <li>IMovie</li>
-      <li>Dev C++</li>
-      <li>Python 3.7.1</li>
-      <li>Xilinx ISE</li>
-      <li>Atom</li>
-      <li>Visual Studio Code</li>
-    </ul>
+<body>
 
-  </body>
+  <h1>Software dominados</h1>
+
+  <ul>
+    <li>Microsoft project</li>
+    <li>ETSt profesional KNX</li>
+    <li>SolidWorks</li>
+    <li>MasterCam</li>
+    <li>KiCad</li>
+    <li>Microsoft Office paquete profesional</li>
+    <li>MatLab</li>
+    <li>VIVADO</li>
+    <li>MPLab</li>
+    <li>IMovie</li>
+    <li>Dev C++</li>
+    <li>Python 3.7.1</li>
+    <li>Xilinx ISE</li>
+    <li>Atom</li>
+    <li>Visual Studio Code</li>
+  </ul>
+  <h1><a href="index.html">BACK</a></h1>
+</body>
+
 </html>
