--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@
         <td>
           <li>Manejo de herramientas digitales para anàlisis y community management</li>
         </td>
+        <td>
+          <li>Amar a mi novia Nicole Diaz Caraballo</li>
+        </td>
       </tr>
     </ul>
   </table>
