--- a/index.html
+++ b/index.html
@@ -5,65 +5,85 @@
   <meta charset="utf-8">
   <title> ⚙🔧Hector's Personal Site 🔧⚙</title>
   <link rel="stylesheet" href="CSS/styles.css">
+  <style media="screen">
+    .resumen {
+      width: 900px;
+    }
 
+    .informacionpersonal {
+      position: absolute;
+      right: 150px;
+      top: 50px;
+
+    }
+
+    .habtecnicas {
+      position: absolute;
+      right: 100px;
+      top: 273px;
+    }
+
+    .links {
+      position: absolute;
+      right: 450px;
+      top: 534px;
+
+    }
+  </style>
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/fondoblanco.png" style="width:200px;height:200px;" alt="Imagen Presentacion Hector inoa"></td>
-      <td>
-        <h1> Hector Manuel Inoa Nuñez</h1>
-        <hr noshade>
 
-        <p>Ingeniero mecatrónico con amplia experiencia en proyectos de integración
-          de tecnologias, automatización, eficiencia energética y dirección de proyectos
-          a pequeña escala. Amplio dominio de diferentes software computacionales, así
-          como facilidad y disponibilidad de aprendizaje de nuevos softwares, herramientas
-          y procedimeintos necesarios para llevar a cabo la tarea encomendada, Sociable,
-          con habilidades para el trabajo en equipo, así como liderar equipos de trabajo de
-          manera eficaz y eficiente.
-      </td>
-    </tr>
-  </table>
+  <div class="resumen">
 
-  <h3>Informacion Personal</h3>
-  <hr noshade>
-  <table cellspacing="3">
-    <tr>
-      <td>Fecha de nacimiento:</td>
-    </tr>
-    <tr>
-      <td><strong>16 Octubre 1996</strong></td>
-    </tr>
-    <tr>
-      <td>Cedula:</td>
-    </tr>
-    <tr>
-      <td><strong>402-2478861-8</strong></td>
-    </tr>
-    <tr>
-      <td> Teléfono celular:</td>
-    </tr>
-    <tr>
-      <td><strong>809-306-4788</strong></td>
-    </tr>
-    <tr>
-      <td>Correo electrónico:</td>
-    </tr>
-    <tr>
-      <td><strong>hector_inoa@hotmail.com</strong></td>
-    </tr>
-    <tr>
-      <td>Idiomas:</td>
-    </tr>
-    <tr>
-      <td><strong>Español (lengua materna)</strong></td>
-    </tr>
-    <tr>
-      <td><strong>Inlgés (avanzado)</strong></td>
-    </tr>
-  </table>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="images/fondoblanco.png" style="width:200px;height:200px;" alt="Imagen Presentacion Hector inoa"></td>
+        <td>
+          <h1> Hector Manuel Inoa Nuñez</h1>
+          <hr noshade>
+
+          <p>Ingeniero mecatrónico con amplia experiencia en proyectos de integración
+            de tecnologias, automatización, eficiencia energética y dirección de proyectos
+            a pequeña escala. Amplio dominio de diferentes software computacionales, así
+            como facilidad y disponibilidad de aprendizaje de nuevos softwares, herramientas
+            y procedimeintos necesarios para llevar a cabo la tarea encomendada, Sociable,
+            con habilidades para el trabajo en equipo, así como liderar equipos de trabajo de
+            manera eficaz y eficiente.
+        </td>
+      </tr>
+    </table>
+  </div>
+
+  <div class="informacionpersonal">
+    <h3>Informacion Personal</h3>
+    <hr noshade>
+    <table cellspacing="3">
+      <tr>
+        <td>Fecha de nacimiento:</td>
+        <td>Correo electrónico:</td>
+      </tr>
+      <tr>
+        <td><strong>16 Octubre 1996</strong></td>
+        <td><strong>hector_inoa@hotmail.com</strong></td>
+      </tr>
+      <tr>
+        <td>Cedula:</td>
+        <td>Idiomas:</td>
+      </tr>
+      <tr>
+        <td><strong>402-2478861-8</strong></td>
+        <td><strong>Español (lengua materna)</strong></td>
+      </tr>
+      <tr>
+        <td> Teléfono celular:</td>
+        <td><strong>Inlgés (avanzado)</strong></td>
+      </tr>
+      <tr>
+        <td><strong>809-306-4788</strong></td>
+      </tr>
+    </table>
+  </div>
 
   <h3>Educación</h3>
   <hr noshade>
@@ -101,55 +121,62 @@
 
   </table>
 
-  <h3>Habilidades técnicas</h3>
-  <hr noshade>
-  <table cellspacing="10">
-    <ul>
-      <tr>
-        <td>
-          <li>Diseño y desarrollo de hardware</li>
-        </td>
-        <td>
-          <li>Proyect Management</li>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <li>Soldadura MIG, arco electrico</li>
-        </td>
-        <td>
-          <li>Soldadura Pcb</li>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <li>Programación C++</li>
-        </td>
-        <td>
-          <li>Programación c#</li>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <li>Progrmacion Assembler</li>
-        </td>
-        <td>
-          <li>Programación HTML5</li>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <li>Amplio conocimiento de infotmática</li>
-        </td>
-        <td>
-          <li>Manejo de herramientas digitales para anàlisis y community management</li>
-        </td>
-        <td>
-          <li>Amar a mi novia Nicole Diaz Caraballo</li>
-        </td>
-      </tr>
-    </ul>
-  </table>
+
+  <div class="habtecnicas">
+
+    <h3>Habilidades técnicas</h3>
+    <hr noshade>
+    <table cellspacing="10">
+      <ul>
+        <tr>
+          <td>
+            <li>Diseño y desarrollo de hardware</li>
+          </td>
+          <td>
+            <li>Proyect Management</li>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <li>Soldadura MIG, arco electrico</li>
+          </td>
+          <td>
+            <li>Soldadura Pcb</li>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <li>Programación C++</li>
+          </td>
+          <td>
+            <li>Programación c#</li>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <li>Progrmacion Assembler</li>
+          </td>
+          <td>
+            <li>Programación HTML5</li>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <li>Amplio conocimiento de infotmática</li>
+          </td>
+          <td>
+            <li>Amar a mi novia Nicole Diaz Caraballo</li>
+          </td>
+        </tr>
+        </tr>
+        <tr>
+          <td>
+            <li>Mcommunity management</li>
+          </td>
+        </tr>
+      </ul>
+    </table>
+  </div>
 
   <h3>Experiencia Laboral</h3>
   <hr noshade>
@@ -184,21 +211,25 @@
     </tbody>
   </table>
 
-  <ul>
-    <li>
-      <h3><a href="soft.html">Software dominados</a></h3>
-    </li>
-    <li>
-      <h3><a href="poyects.html">Proyecto desarrollados</a></h3>
-    </li>
-    <li>
-      <h3><a href="hobbies.html">Area de interes</a></h3>
-    </li>
-    <li>
-      <h3><a href="contac-me.html">Formas de contacto</a></h3>
-    </li>
-  </ul>
 
+  <div class="links">
+    <h3>Otros</h3>
+    <hr noshade>
+    <ul>
+      <li>
+        <h3><a href="soft.html">Software dominados</a></h3>
+      </li>
+      <li>
+        <h3><a href="poyects.html">Proyecto desarrollados</a></h3>
+      </li>
+      <li>
+        <h3><a href="hobbies.html">Area de interes</a></h3>
+      </li>
+      <li>
+        <h3><a href="contac-me.html">Formas de contacto</a></h3>
+      </li>
+    </ul>
+  </div>
 
 </body>
 
